# substrate-lesson

./: .gitignore  Cargo.toml  README.md
clitools/: Cargo.toml
clitools/src/: args.rs  main.rs
echoServer/: Cargo.toml
echoServer/src/: echo_server.rs  main.rs  tcp_server.rs  tcpserver.rs
substrate-node/pallets/erc20/: Cargo.toml
substrate-node/pallets/erc20/src/: erc20.rs  lib.rs
substrate-node/pallets/evidence/: Cargo.toml
substrate-node/pallets/evidence/src/: lib.rs
substrate-node/pallets/template/: Cargo.toml
substrate-node/runtime/: Cargo.toml
substrate-node/runtime/src/: lib.rs
tcpServer/: Cargo.toml
tcpServer/src/: args.rs  main.rs  tcp_server.rs
